<resources>
    <string name="app_name">Random Activities</string>
    <string name="ticTacToeStarter">Tic Tac Toe</string>
    <string name="countriesStarter">Countries</string>
    <string name="greetStarter">Random Greet</string>


    <string name="es">Spanish (CO)</string>
    <string name="en">English</string>
    <string name="fr">French</string>
    <string name="jp">Japanese (Romaji)</string>

    <string-array name="languages">
        <item>@string/es</item>
        <item>@string/en</item>
        <item>@string/fr</item>
        <item>@string/jp</item>
    </string-array>

    <string name="devMark">💜 Developed by Nicolás Montañez 💜</string>

    <string name="gameTitle">Tic-Tac-Toe</string>
    <string name="initialState">Turn: Player %1$s</string>
    <string name="emptyTile" />
    <string name="restart">Restart Game</string>
    <string name="player1_mark">X</string>
    <string name="player2_mark">O</string>

    <string name="esGreet">¿Qué más? ¿Todo bien?</string>
    <string name="enGreet">Oi, oi, mate</string>
    <string name="frGreet">Coucou </string>
    <string name="jpGreet">Konnichiwa</string>
    <string name="altImage" />
    <string name="randomButton">Random Greeting</string>

    <string name="countryName">%d : %s (%s)</string>
    <string name="countryDetail">%s (%s)</string>
    <string name="countryCapital">Capital: %s</string>
    <string name="altName">(%s)</string>
    <string name="flagAlt">countryFlag</string>
</resources>