<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/countryRow"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <ImageView
        android:id="@+id/countryFlag"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:contentDescription="@string/flagAlt"
        app:srcCompat="@drawable/load" />

    <LinearLayout
        android:id="@+id/countryInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:padding="10dp"
            android:id="@+id/countryName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/countryName" />

        <TextView
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:id="@+id/countryCapital"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:gravity="center_vertical"
            android:textSize="15sp"
            android:text="@string/countryCapital" />

    </LinearLayout>

</LinearLayout>