<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:text="@string/gameTitle"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/current_turn"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/current_turn"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/initialState"
        android:textAlignment="center"
        android:textColor="@color/main"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/gameTable"
        tools:layout_editor_absoluteX="30dp" />

    <LinearLayout
        android:id="@+id/gameTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/row_1"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/grid_1"
                android:layout_width="75dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:tag="1"
                android:text="@string/emptyTile"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/grid_2"
                android:layout_width="75dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:tag="2"
                android:text="@string/emptyTile"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/grid_3"
                android:layout_width="75dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:tag="3"
                android:text="@string/emptyTile"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:cornerRadius="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_2"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/grid_4"
                android:layout_width="75dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:tag="4"
                android:text="@string/emptyTile"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/grid_5"
                android:layout_width="75dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:tag="5"
                android:text="@string/emptyTile"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/grid_6"
                android:layout_width="75dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:tag="6"
                android:text="@string/emptyTile"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:cornerRadius="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_3"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/grid_7"
                android:layout_width="75dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:tag="7"
                android:text="@string/emptyTile"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/grid_8"
                android:layout_width="75dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:tag="8"
                android:text="@string/emptyTile"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/grid_9"
                android:layout_width="75dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:tag="9"
                android:text="@string/emptyTile"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:cornerRadius="15dp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/winAlert"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text=""
        android:textAlignment="center"
        android:textColor="#FFA000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/gameTable"
        tools:layout_editor_absoluteX="-16dp" />

    <Button
        android:id="@+id/restartButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/restart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winAlert" />

</androidx.constraintlayout.widget.ConstraintLayout>